minecarts uncrafting added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,12 @@
     "Datapack",
     "datapacks",
     "jsons",
+    "mcfunction",
+    "minecart",
+    "minecarts",
     "Modrinth",
-    "tellraw"
+    "tellraw",
+    "uncraft",
+    "uncrafting"
   ]
 }
