--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
     "Modrinth",
     "tellraw",
     "uncraft",
-    "uncrafting"
+    "uncrafting",
+    "undispense",
+    "undispenser"
   ]
 }
