--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,13 @@
     "minecart",
     "minecarts",
     "Modrinth",
+    "shouldve",
     "tellraw",
     "uncraft",
     "uncrafting",
     "undispense",
-    "undispenser"
+    "undispenser",
+    "undispensing",
+    "unsticky"
   ]
 }
